Site is caught up to Zans nates

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </nav>
-    
+    <img src="./pictures/Zannah&Matt_1.png" alt="Zannah and Matt">
 
 </body>
 
