--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="mcunkelman">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./pictures/icon/ZandM.png" type="image/x-icon"/>
     <title>Zannah and Matt</title>
 </head>
 
@@ -26,12 +27,12 @@
                 <li class="activetab" title="Home"><a href="./index.html">Home</a></li>
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
                 <li title="Event"><a href="./event.html">Event</a></li>
-                <li title="Accommodations"><a href="./accommodations">Accommodations</a></li>
+                <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
             </ul>
         </div>
     </nav>
-    <img src="./pictures/Zannah&Matt_1.png" alt="Zannah and Matt">
-
+    <a href="./pictures/Full/ZandM7.png" target="_blank"><img src="./pictures/600high/ZandM7.png" alt="Zannah and Matt"> </a> 
+    <br><br>
 </body>
 
 </html>
