--- a/met.html
+++ b/met.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="mcunkelman">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./pictures/icon/ZandM.png" type="image/x-icon"/>
     <title>Zannah and Matt</title>
 </head>
 
@@ -26,22 +27,22 @@
                 <li title="Home"><a href="./index.html">Home</a></li>
                 <li class="activetab" title="How We Met"><a href="./met.html">How We Met</a></li>
                 <li title="Event"><a href="./event.html">Event</a></li>
-                <li title="Accommodations"><a href="./accommodations">Accommodations</a></li>
+                <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
             </ul>
         </div>
     </nav>
-    <div class="text">
+    <div id="text">
         <p>
             <br><br>
-            <strong>The Short Answer: </strong><br><br>
+            <div id="imp">The Short Answer: </div><br>
             Matt picked Zan up from alongside the road on a cold, rainy, dreary November 5, 2017 day. 
             <br><br>
-            <strong>The Long Answer: </strong><br><br>
+            <div id="imp">The Long Answer: </div><br>
             Want to volunteer at 5AM on a Sunday for a 10 mile race? 
             <br><br>
             If you asked 2017 Matt, the answer would be a firm NO. No to 5AM, no to the cold, no to running. Definitely no to being outside, in the cold, at 5AM to hand out water. Unfortunately (or so he thought), Matt was volun-told to be at the 2017 EQT 10-miler along with his work-appointed high school mentee. Grudgingly, and with the rainy morning matching his mood, Matt said goodbye to Archer and drove into downtown. 
             <br><br>
-            If you ask Zannah, she would tell you that she loves road races and, in one of her more brilliant moments, realized if she is volunteering for them, she never has to actually *run* them. With encouragement from her mother to “do something to meet people” Zannah also signed up to volunteer at the 2017 EQT 10-miler (Author note: Upon hearing Zan signed up to volunteer at 5 AM for a race, Liz said with a touch of exasperation “I didn’t mean THAT, I meant a class or something!!” Little did she know…). Zannah jauntily walked down from her apartment a few blocks away, ready to cheer on the runners. 
+            If you ask Zannah, she would tell you that she loves road races and, in one of her more brilliant moments, realized if she is volunteering for them, she never has to actually *run* them. With encouragement from her mother to “do something to meet people” Zannah also signed up to volunteer at the 2017 EQT 10-miler <i>(Author note: Upon hearing Zan signed up to volunteer at 5 AM for a race, Liz said with a touch of exasperation “I didn’t mean THAT, I meant a class or something!!” Little did she know…)</i>. Zannah jauntily walked down from her apartment a few blocks away, ready to cheer on the runners. 
             <br><br>
             As fate, or volunteer assignments would have it, we were assigned to the same station, and started chatting. Zannah’s enthusiasm for handing out water and encouraging runners was contagious and Matt found himself intrigued by this person who seemed to be *enjoying* herself. And then! He found out she wasn’t required to be there! She CHOSE this! 
             <br><br>
@@ -51,6 +52,8 @@
             <br><br>
         </p>
     </div>
+    <a href="./pictures/Full/ZandM1.png" target="_blank"><img src="./pictures/600high/ZandM1.png" alt="Zannah and Matt with Archer and Reka"> </a> 
+    <br><br>
 </body>
 
 </html>
