Fixed the font sizing nightmare

--- a/accommodations.html
+++ b/accommodations.html
@@ -17,9 +17,9 @@
 
 <body>
     <header>
-            <h1>Zannah & Matt</h1>
-            <h2>Anniversary Celebration: October 22nd, 2022</h2>
-            <h2>Pittsburgh, PA</h2>
+        <h1>Zannah & Matt</h1>
+        <h2>Anniversary Celebration: October 22nd, 2022</h2>
+        <h2>Pittsburgh, PA</h2>
     </header>
     <nav>
         <div id="menu">
@@ -33,11 +33,9 @@
     </nav>
     <div id="text">
         <p>
-            <br><br>
-            <center>
-            <div id="imp" >More information to come soon! </div><br>
-            </center>
-            <br><br>
+            <div class="update">
+                More Info to Come Soon!
+            </div>
         </p>
     </div>
     <a href="./pictures/Full/ZandM16.png" target="_blank"><img src="./pictures/600high/ZandM16.png" alt="Zannah and Matt with Archer and Reka"> </a> 
