--- a/met.html
+++ b/met.html
@@ -31,13 +31,13 @@
             </ul>
         </div>
     </nav>
+
     <div id="text">
         <p>
-            <br><br>
-            <div id="imp">The Short Answer: </div><br>
+            <strong>The Short Answer: </strong><br/><br/>
             Matt picked Zan up from alongside the road on a cold, rainy, dreary November 5, 2017 day. 
             <br><br>
-            <div id="imp">The Long Answer: </div><br>
+            <strong>The Long Answer: </strong><br>
             Want to volunteer at 5AM on a Sunday for a 10 mile race? 
             <br><br>
             If you asked 2017 Matt, the answer would be a firm NO. No to 5AM, no to the cold, no to running. Definitely no to being outside, in the cold, at 5AM to hand out water. Unfortunately (or so he thought), Matt was volun-told to be at the 2017 EQT 10-miler along with his work-appointed high school mentee. Grudgingly, and with the rainy morning matching his mood, Matt said goodbye to Archer and drove into downtown. 
@@ -52,8 +52,10 @@
             <br><br>
         </p>
     </div>
+    <br/><br/>
     <a href="./pictures/Full/ZandM1.png" target="_blank"><img src="./pictures/600high/ZandM1.png" alt="Zannah and Matt with Archer and Reka"> </a> 
     <br><br>
+
 </body>
 
 </html>
