fix nav display

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
                 <li title="Event"><a href="./event.html">Event</a></li>
                 <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
+                <li title="Drinks"><a href="./drinks.html">Drinks</a> </li>
             </ul>
         </div>
     </nav>
