--- a/testing.html
+++ b/testing.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./pictures/icon/ZandM.png" type="image/x-icon"/>
     <title>Zannah and Matt</title>
+    <!-- Adding Google analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E75DDSSYWF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-E75DDSSYWF');
+    </script>
 </head>
 
 <body>
