--- a/event.html
+++ b/event.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./pictures/icon/ZandM.png" type="image/x-icon"/>
     <title>Zannah and Matt</title>
+    <!-- Adding Google analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E75DDSSYWF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-E75DDSSYWF');
+    </script>
 </head>
 
 <body>
@@ -28,6 +37,7 @@
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
                 <li class="activetab" title="Event"><a href="./event.html">Event</a></li>
                 <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
+                <li title="Drinks"><a href="./drinks.html">Drinks</a> </li>
             </ul>
         </div>
     </nav>
