--- a/accommodations.html
+++ b/accommodations.html
@@ -48,7 +48,7 @@
             </div>
         </p>
     </div>
-    <a href="./pictures/Full/ZandM16.png" target="_blank"><img src="./pictures/600high/ZandM16.png" alt="Zannah and Matt with Archer and Reka"> </a> 
+    <a href="./pictures/Full/ZandM16.png" target="_blank"><img src="./pictures/600high/ZandM16.png" alt="Zannah and Matt with Pittsburgh Glass"> </a> 
     <br><br>
 </body>
 
