--- a/drinks.html
+++ b/drinks.html
@@ -26,9 +26,24 @@
 </head>
 
 <body>
+    <header>
+        <h1>Zannah & Matt</h1>
+        <h2>Anniversary Celebration: October 22nd, 2022</h2>
+        <h2>Pittsburgh, PA</h2>
+    </header>
+    <nav>
+        <div id="menu">
+            <ul>
+                <li class="activetab" title="Home"><a href="./index.html">Home</a></li>
+                <li title="How We Met"><a href="./met.html">How We Met</a></li>
+                <li title="Event"><a href="./event.html">Event</a></li>
+                <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
+                <li title="Drinks"><a href="./drinks.html">Drinks</a> </li>
+            </ul>
+        </div>
+    </nav>
 
-
-    
+    <a href="./pictures/Full/ZandM14.png" target="_blank"><img src="./pictures/600high/ZandM14.png" alt="Drinks"> </a> 
 </body>
 
 </html>
