finished drinks page

--- a/drinks.html
+++ b/drinks.html
@@ -44,6 +44,43 @@
     </nav>
 
     <a href="./pictures/Full/ZandM14.png" target="_blank"><img src="./pictures/600high/ZandM14.png" alt="Drinks"> </a> 
+    <br/><br/>
+    <div id="recipe">
+        <p>
+            <strong><u>Drinks</u></strong><br/><br/>
+            To help you toast us, check out some of our favorite drinks!
+
+            <br/><br/>
+
+            <strong>Old Fashioned</strong><br/><br/>
+            Ingredients:<br/><br/>
+            <ul>
+                <li>2oz. Bulleit Rye</li>
+                <li>Orange Squeeze</li>
+                <li>Maraschino Cherry</li>
+                <li>Maraschino Cherry Syrup</li>
+                <li>Grapefruit Bitters</li>
+            </ul>
+            <br/>
+            Instructions:<br/>
+            Mix and pour over ice. If you add ingredients directly to ice, 
+            start with bourbon or the syrup and orange will freeze.
+            
+            <br/><br/>
+            <strong>Chocolate Milk</strong><br/><br/>
+            Ingredients:<br/><br/>
+            <ul>
+                <li>One large squeeze of Hershey’s Syrup</li>
+            <li>One glass of Milk (Zan recommends 1%)</li>
+            </ul>
+            <br/>
+            Instructions:<br/>
+            Pour milk in a tall glass until it’s about ¾ of an inch from the top. <br/>
+            Add one large squeeze of Hershey’s Syrup to the glass (more if desired). <br/>
+            Stir vigorously with a spoon. Stop stirring, wait for milk to stop spinning, stir again to properly mix. <br/>
+            Then enjoy!
+        </p>
+    </div>
 </body>
 
 </html>
