--- a/drinks.html
+++ b/drinks.html
@@ -34,20 +34,19 @@
     <nav>
         <div id="menu">
             <ul>
-                <li class="activetab" title="Home"><a href="./index.html">Home</a></li>
+                <li title="Home"><a href="./index.html">Home</a></li>
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
                 <li title="Event"><a href="./event.html">Event</a></li>
                 <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
-                <li title="Drinks"><a href="./drinks.html">Drinks</a> </li>
+                <li class="activetab" title="Drinks"><a href="./drinks.html">Drinks</a> </li>
             </ul>
         </div>
     </nav>
 
-    <a href="./pictures/Full/ZandM14.png" target="_blank"><img src="./pictures/600high/ZandM14.png" alt="Drinks"> </a> 
+    
     <br/><br/>
     <div id="recipe">
         <p>
-            <strong><u>Drinks</u></strong><br/><br/>
             To help you toast us, check out some of our favorite drinks!
 
             <br/><br/>
@@ -81,6 +80,7 @@
             Then enjoy!
         </p>
     </div>
+    <a href="./pictures/Full/ZandM14.png" target="_blank"><img src="./pictures/600high/ZandM14.png" alt="Drinks"> </a> 
 </body>
 
 </html>
