Updated home tab on update branch

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
         <h1>Zannah & Matt</h1>
         <h2>Anniversary Celebration: October 22nd, 2022</h2>
-        <h2>Pittsburgh, PA</h2>
+        <h2>PNC Park, Pittsburgh, PA</h2>
     </header>
     <nav>
         <div id="menu">
@@ -42,7 +42,7 @@
             </ul>
         </div>
     </nav>
-    <a href="./pictures/Full/ZandM7.png" target="_blank"><img src="./pictures/600high/ZandM7.png" alt="Zannah and Matt"> </a> 
+    <a href="./pictures/Full/Wedding79.png" target="_blank"><img src="./pictures/600high/Wedding79.png" alt="Zannah and Matt"> </a> 
     <br><br>
 </body>
 
