More updates to align with doc status

--- a/celebration.html
+++ b/celebration.html
@@ -35,12 +35,13 @@
             <ul>
                 <li title="Home"><a href="./index.html">Home</a></li>
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
-                <li class="activetab" title="Event"><a href="./event.html">Event</a></li>
+                <li class="activetab" title="Celebration"><a href="./celebration.html">Celebration</a></li>
                 <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
                 <li title="Drinks"><a href="./drinks.html">Drinks</a> </li>
             </ul>
         </div>
     </nav>
+    <a href="./pictures/Full/Wedding32.png" target="_blank"><img src="./pictures/600high/Wedding32.png" alt="First Dance"> </a> 
     <br/>
     <div id="text">
         <p>
