--- a/drinks.html
+++ b/drinks.html
@@ -36,7 +36,7 @@
             <ul>
                 <li title="Home"><a href="./index.html">Home</a></li>
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
-                <li title="Event"><a href="./event.html">Event</a></li>
+                <li title="Celebration"><a href="./celebration.html">Celebration</a></li>
                 <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
                 <li class="activetab" title="Drinks"><a href="./drinks.html">Drinks</a> </li>
             </ul>
