Updated accomadations and celebrations tab

--- a/celebration.html
+++ b/celebration.html
@@ -45,18 +45,22 @@
     <br/>
     <div id="text">
         <p>
-            
-            Given all the continued uncertainty surrounding COVID, and our desire to get married this year, we have decided to have a small, immediate family only, wedding ceremony on October 23, 2021. We’re sad not to have everyone physically with us on that date, but we know you’ll be there in spirit. 
+            <div class="intro">
+                It’s finally happening! Who is ready to party?!
+            </div>
             <br><br>
-            However! We do want to celebrate with you in person, and hope you’ll save our Anniversary Party date: October 22, 2022! Bring your dancing shoes, and be ready for a great time. 
+            Please join us at 5PM in the Keystone Club at PNC Park for dinner, drinks, and dancing to celebrate our 1-year wedding anniversary!
             <br><br>
-            Until then, we ask that you take a moment this October 23rd to raise a glass of your favorite beverage (we recommend an Old Fashioned) to celebrate us from wherever you are. We’ll do the same to celebrate the people who have shaped us into who we are today.
+            While we won’t have assigned seats, we will have a social evening of celebration, good food, and fun. Please reach out to us if you have any specific dietary needs.
             <br><br>
-            More details to follow!
+            Attire is cocktail-wear, please bring yourself, and be ready to dance!
+            <br><br>
+            See the map below for additional day-of details. We’ll be using the “Press/Media” entrance, and if you’re looking for somewhere to park, the Red Lot 6 should be open (pay parking).
+            <br><br>
         </p>
     </div>
     <br/><br/>
-    <a href="./pictures/Full/ZandM5.png" target="_blank"><img src="./pictures/600high/ZandM5.png" alt="Zannah and Matt"> </a> 
+    <a href="./pictures/Full/pncmap.png" target="_blank"><img src="./pictures/600high/pncmap.png" alt="Map of PNC Park"> </a> 
  
 </body>
 
