--- a/accommodations.html
+++ b/accommodations.html
@@ -43,12 +43,31 @@
     </nav>
     <div id="text">
         <p>
-            <div class="update">
-                More Info to Come Soon!
+            The great news about a ballpark means many hotels within walking distance! 
+            We’ve reserved a block of rooms for folks who would like to stay either 
+            Friday, Saturday, or both nights at the Hyatt Place. 
+            Hotel rooms must be booked by 9/1/22 to secure the rate and availability. 
+            The rate is $189/night and parking is $22/day.
+            <br><br>
+            <div class="address">
+                Hyatt Place Pittsburgh North Shore <br>
+                260 North Shore Drive <br>
+                Pittsburgh, PA 15212
             </div>
+            <br><br>
+            You can book 
+            <a href="https://www.hyatt.com/en-US/hotel/pennsylvania/hyatt-place-pittsburgh-north-shore/pitzn?corp_id=G-BACU" target="_blank">here</a>, using the G-BACU code. 
+            
+            Or, you can call them at 412-321-3000, 
+            and make sure you say you’re booking for the “Bailey-Cunkelman Wedding” to secure the rate.
+            <br><br>
+            Not a Hyatt person? 
+            There are also 2 Marriotts and a Holiday Inn Express also close to PNC park. 
+            You can see proximity on the map below.
+
         </p>
     </div>
-    <a href="./pictures/Full/ZandM16.png" target="_blank"><img src="./pictures/600high/ZandM16.png" alt="Zannah and Matt with Pittsburgh Glass"> </a> 
+    <a href="./pictures/Full/pncmap.png" target="_blank"><img src="./pictures/600high/pncmap.png" alt="Map of PNC Park"> </a> 
     <br><br>
 </body>
 
