Fixed typo and set max width

--- a/met.html
+++ b/met.html
@@ -50,15 +50,47 @@
             <strong>The Long Answer: </strong><br>
             Want to volunteer at 5AM on a Sunday for a 10 mile race? 
             <br><br>
-            If you asked 2017 Matt, the answer would be a firm NO. No to 5AM, no to the cold, no to running. Definitely no to being outside, in the cold, at 5AM to hand out water. Unfortunately (or so he thought), Matt was volun-told to be at the 2017 EQT 10-miler along with his work-appointed high school mentee. Grudgingly, and with the rainy morning matching his mood, Matt said goodbye to Archer and drove into downtown. 
+            If you asked 2017 Matt, the answer would be a firm NO. 
+            No to 5AM, no to the cold, no to running. 
+            Definitely no to being outside, in the cold, at 5AM to hand out water. 
+            Unfortunately (or so he thought), 
+            Matt was volun-told to be at the 2017 EQT 10-miler along with his work-appointed high school mentee. 
+            Grudgingly, and with the rainy morning matching his mood, 
+            Matt said goodbye to Archer and drove into downtown. 
             <br><br>
-            If you ask Zannah, she would tell you that she loves road races and, in one of her more brilliant moments, realized if she is volunteering for them, she never has to actually *run* them. With encouragement from her mother to “do something to meet people” Zannah also signed up to volunteer at the 2017 EQT 10-miler <i>(Author note: Upon hearing Zan signed up to volunteer at 5 AM for a race, Liz said with a touch of exasperation “I didn’t mean THAT, I meant a class or something!!” Little did she know…)</i>. Zannah jauntily walked down from her apartment a few blocks away, ready to cheer on the runners. 
+            If you ask Zannah, she would tell you that she loves road races and, 
+            in one of her more brilliant moments, realized if she is volunteering for them, 
+            she never has to actually *run* them. 
+            With encouragement from her mother to “do something to meet people” 
+            Zannah also signed up to volunteer at the 2017 EQT 10-miler 
+            <i>(Author note: Upon hearing Zan signed up to volunteer at 5 AM for a race, 
+                Liz said with a touch of exasperation “I didn’t mean THAT, I meant a class or something!!” 
+                Little did she know…)
+            </i>. 
+            Zannah jauntily walked down from her apartment a few blocks away, ready to cheer on the runners. 
             <br><br>
-            As fate, or volunteer assignments would have it, we were assigned to the same station, and started chatting. Zannah’s enthusiasm for handing out water and encouraging runners was contagious and Matt found himself intrigued by this person who seemed to be *enjoying* herself. And then! He found out she wasn’t required to be there! She CHOSE this! 
+            As fate, or volunteer assignments would have it, 
+            we were assigned to the same station, 
+            and started chatting. 
+            Zannah’s enthusiasm for handing out water and encouraging runners was contagious and Matt found himself 
+            intrigued by this person who seemed to be *enjoying* herself. 
+            And then! He found out she wasn’t required to be there! She CHOSE this! 
             <br><br>
-            While that caused Matt a moment of doubt, he ultimately decided this girl was interesting. As for Zannah, she thought the cute guy who was making the best of being somewhere he clearly didn’t want to be was worth getting to know better. And! He had a dog! After talking throughout the race, handing out water, and having a great time, Matt suggested breakfast at Delucas. Never one to turn down an opportunity for a meal, Zannah joined him, and the rest, as they say, is history. 
+            While that caused Matt a moment of doubt, 
+            he ultimately decided this girl was interesting. 
+            As for Zannah, she thought the cute guy who was making the best of being somewhere 
+            he clearly didn’t want to be was worth getting to know better. 
+            And! He had a dog! After talking throughout the race, handing out water, 
+            and having a great time, Matt suggested breakfast at Delucas. 
+            Never one to turn down an opportunity for a meal, Zannah joined him, 
+            and the rest, as they say, is history. 
             <br><br>
-            Since we met, we’ve shared an apartment and bought a house. We’ve traveled around the US and the world, with many more destinations on our wish list. In early 2020, we added 4 paws to our pack with the adoption of Reka, the rescue husky. Most importantly, we have survived (thrived?) these past pandemic year's with lots of laughter, bourbon, delicious food, and walks around the neighborhood. We can’t wait to celebrate our continued adventures with you all! 
+            Since we met, we’ve shared an apartment and bought a house. 
+            We’ve traveled around the US and the world, with many more destinations on our wish list. 
+            In early 2020, we added 4 paws to our pack with the adoption of Reka, the rescue husky. 
+            Most importantly, we have survived (thrived?) these past pandemic year'
+            s with lots of laughter, bourbon, delicious food, and walks around the neighborhood. 
+            We can’t wait to celebrate our continued adventures with you all! 
             <br><br>
         </p>
     </div>
