July update to things to do page

--- a/thingstodo.html
+++ b/thingstodo.html
@@ -51,6 +51,109 @@
                 Here are some of our recommendations:
             </div>
             <br/>
+            <div class="topic">
+                Looking for indoor adventures? Check out some museums!
+            </div>
+            <br/>
+            <div class="todo">
+                <ul>
+                    <li>Carnegie Science Center (One Allegheney Ave. Pittsburgh PA 15212
+                        <ul>
+                            <li><a href="https://carnegiesciencecenter.org/" target="_blank">carnegiesciencecenter.org </a></li>
+                            <li>Educational fun for all ages!</li>
+                        </ul></li>
+                    <li>Carnegie Museum of Art (4400 Forbes Ave. Pittsburgh, PA 15213)
+                        <ul>
+                            <li><a href="https://cmoa.org/" target="_blank">cmoa.org</a></li>
+                            <li>Who doesn't love art?!</li>
+                        </ul></li>
+                    <li>Warhol Museum (The Andy Warhol Museum 117 Sandusky Street Pittsburgh, PA 15212)
+                        <ul>
+                            <li><a href="https://www.warhol.org/" target="_blank">warhol.org</a></li>
+                            <li>Did you know he was from Pittsburgh?</li>
+                        </ul></li>
+                    <li>Carnegie Museum of Natural History (4400 Forbes Ave. Pittsburgh, PA 15213)
+                        <ul>
+                            <li><a href="https://carnegiemnh.org/" target="_blank">carnegiemnh.org</a></li>
+                            <li>History is fun!</li>
+                        </ul>
+                    </li>
+                    <li>Heinz History Center (1212 Smallman St. Pittsburgh, PA 15222)
+                        <ul>
+                            <li><a href="https://www.heinzhistorycenter.org/" target="_blank">heinzhistorycenter.org</a></li>
+                            <li>Local history is fun too!</li>
+                        </ul>
+                    </li>
+                    <li>Children’s Museum (10 Children’s Way, Allegheny Square Pittsburgh, PA 15212)
+                        <ul>
+                            <li><a href="https://pittsburghkids.org/" target="_blank">pittsburghkids.org</a></li>
+                            <li>For the kids. And the kid in all of us.</li>
+                        </ul>
+                    </li>
+                    <li>Mattress Factory (500 Sampsonia Way Pittsburgh, PA 15212)
+                        <ul>
+                            <li><a href="https://mattress.org/" target="_blank">mattress.org</a></li>
+                            <li>Honestly: haven’t been yet, but we’ve heard good things!</li>
+                        </ul>
+                    </li>
+                    <li>August Wilson African American Cultural Center (980 Liberty Avenue, Pittsburgh PA 15222)
+                        <ul>
+                            <li><a href="https://awaacc.org/" target="_blank">awaacc.org</a></li>
+                            <li>Also a notable Yinzer.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+                <br/>
+                <div class="topic">
+                    Want to spend some time outdoors, or walking around, or enjoying things inherently Pittsburgh? Check out these recommendations:
+                </div>
+                <br/>
+            <div class="todo">
+                <ul>
+                    <li>The Phipps (One Schenley Park Pittsburgh, PA 15213)
+                        <ul>
+                            <li><a href="https://www.phipps.conservatory.org/" target="_blank">phipps.conservatory.org</a></li>
+                            <li>Beautiful (mostly indoor) display of flowers, shrubbery, and other garden delights.</li>
+                        </ul>
+                    </li>
+                    <li>Pittsburgh Botanic Gardens (799 Pinkerton Run Road Pittsburgh, PA 15071)
+                        <ul>
+                            <li><a href="https://pittsburghbotanicgarden.org/" target="_blank">pittsburghbotanicgarden.org</a></li>
+                            <li>Beautiful (mostly outdoor) display of flowers, shrubbery, and other garden delights.</li>
+                        </ul>
+                    </li>
+                    <li>The Strip District (One Schenley Park Pittsburgh, PA 15213)
+                        <ul>
+                            <li><a href="https://www.visitpittsburgh.com/neighborhoods/strip-district/" target="_blank">visitpittsburgh.com/neighborhoods/strip-district</a></li>
+                            <li>Visit PennMac and their wall of cheese, grab coffee beans (or a cup!) from Presto George</li>
+                        </ul>
+                    </li>
+                    <li>Ride an incline, there are 2! (We like the Duquesne incline:
+                        <ul>
+                            <li>Duquesne Incline: <a href="http://www.duquesneincline.org/" target="_blank">duquesneincline.org</a></li>
+                            <li>Monongahela incline: <a href="https://monongahelaincline.com/" target="_blank">monongahelaincline.com</a></li>
+                        </ul>
+                    </li>
+                    <li>National Aviary (700 Arch Street, Pittsburgh, PA 15212)
+                        <ul>
+                            <li><a href="https://www.aviary.org/" target="_blank">aviary.org</a></li>
+                            <li>Maybe Pittsburgh is for the birds?</li>
+                        </ul>
+                    </li>
+                    <li>Pittsburgh Zoo and Aquarium (7370 Baker Street Pittsburgh, PA 15206)
+                        <ul>
+                            <li><a href="https://www.pittsburghzoo.org/" target="_blank">pittsburghzoo.org</a></li>
+                            <li>Penguins! Elephants! Cloud leopards! More!</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+                <br/>
+                <div class="topic">
+                    Looking to grab a drink? Check out some of our favorite breweries / cideries:
+                </div>
+                <br/>
             <div class="todo">
                 <ul>
                     <li>Grist House (10 E Sherman St, Pittsburgh, PA 15209)
