More nav changes

--- a/thingstodo.html
+++ b/thingstodo.html
@@ -38,7 +38,7 @@
                 <li title="How We Met"><a href="./met.html">How We Met</a></li>
                 <li title="Celebration"><a href="./celebration.html">Celebration</a></li>
                 <li title="Accommodations"><a href="./accommodations.html">Accommodations</a></li>
-                <li class="activetab" title="Things to Do"><a href="./thingstodo.html">Things to Do</a> </li>
+                <li class="activetab" title="Things to Do"><a href="./thingstodo.html">To Do</a> </li>
             </ul>
         </div>
     </nav>
