Updated parking info

--- a/celebration.html
+++ b/celebration.html
@@ -51,11 +51,11 @@
             <br><br>
             Please join us at 5PM in the Keystone Club at PNC Park for dinner, drinks, and dancing to celebrate our 1-year wedding anniversary!
             <br><br>
-            While we won’t have assigned seats, we will have a social evening of celebration, good food, and fun. Please reach out to us if you have any specific dietary needs.
+            While we won't have assigned seats, we will have a social evening of celebration, good food, and fun. Please reach out to us if you have any specific dietary needs.
             <br><br>
             Attire is cocktail-wear, please bring yourself, and be ready to dance!
             <br><br>
-            See the map below for additional day-of details. We’ll be using the “Press/Media” entrance, and if you’re looking for somewhere to park, the Red Lot 6 should be open (pay parking).
+            See the map below for additional day-of details. We'll be using the "Press/Media" entrance. If you're looking for somewhere to park, you can use the Champions Garage (Gold 4 Parking on the map below). Their rate is around $9 a car for 2+ hours of parking.
             <br><br>
         </p>
     </div>
